[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/fonts/Rubik-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://objects/Player/player.svg" type="Texture" id=2]
[ext_resource path="res://assets/themes/buttons-green.tres" type="Theme" id=3]
[ext_resource path="res://assets/themes/buttons-red.tres" type="Theme" id=4]
[ext_resource path="res://assets/images/icons/text-icons/deads.svg" type="Texture" id=5]
[ext_resource path="res://assets/images/icons/buttons/key.enter.svg" type="Texture" id=6]
[ext_resource path="res://assets/images/icons/buttons/key.move.svg" type="Texture" id=7]
[ext_resource path="res://scenes/GameRoom/Clasification.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 45
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )

[node name="Clasification" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.490196 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.2
anchor_right = 0.8
anchor_bottom = 1.0
margin_left = -81.0
margin_right = 81.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1524.0
margin_bottom = 1000.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TtileMargin" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1524.0
margin_bottom = 219.0
custom_constants/margin_top = 50
custom_constants/margin_bottom = 50

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TtileMargin"]
modulate = Color( 0.141176, 0.741176, 0.141176, 1 )
margin_top = 50.0
margin_right = 1524.0
margin_bottom = 169.0
size_flags_horizontal = 3
size_flags_vertical = 7
theme = SubResource( 2 )
text = "GAME_FINISHED_TITLE"
align = 1
valign = 1
clip_text = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 223.0
margin_right = 1524.0
margin_bottom = 672.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer0" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 1524.0
margin_bottom = 449.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer0"]
margin_right = 1524.0
margin_bottom = 449.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer0/HBoxContainer"]
margin_right = 459.0
margin_bottom = 449.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer0/HBoxContainer/MarginContainer2"]
modulate = Color( 0.870588, 0.901961, 0.0392157, 1 )
margin_top = 194.0
margin_right = 409.0
margin_bottom = 254.0
size_flags_horizontal = 3
size_flags_vertical = 6
theme = SubResource( 4 )
text = "FIRST_ORDINAL"
align = 2
valign = 1

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer0/HBoxContainer"]
margin_left = 463.0
margin_right = 814.0
margin_bottom = 449.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer0/HBoxContainer/MarginContainer4"]
margin_left = 20.0
margin_top = 20.0
margin_right = 331.0
margin_bottom = 429.0
rect_min_size = Vector2( 80, 0 )
size_flags_horizontal = 3
texture = ExtResource( 2 )
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer0/HBoxContainer"]
margin_left = 818.0
margin_right = 1169.0
margin_bottom = 449.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_left = 50

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer0/HBoxContainer/MarginContainer"]
margin_left = 50.0
margin_right = 351.0
margin_bottom = 449.0
size_flags_horizontal = 3
size_flags_vertical = 7
theme = SubResource( 4 )
text = "Jugador 1"
valign = 1

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer0/HBoxContainer"]
margin_left = 1173.0
margin_right = 1524.0
margin_bottom = 449.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_left = 50

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer0/HBoxContainer/MarginContainer3"]
margin_left = 50.0
margin_right = 351.0
margin_bottom = 449.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer0/HBoxContainer/MarginContainer3/HBoxContainer"]
margin_right = 301.0
margin_bottom = 449.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer0/HBoxContainer/MarginContainer3/HBoxContainer/MarginContainer"]
margin_right = 291.0
margin_bottom = 449.0
size_flags_horizontal = 3
size_flags_vertical = 7
theme = SubResource( 4 )
text = "99.6s"
align = 2
valign = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer0/HBoxContainer/MarginContainer3/HBoxContainer"]
visible = false
margin_left = 211.0
margin_right = 301.0
margin_bottom = 449.0
size_flags_vertical = 3
texture = ExtResource( 5 )
stretch_mode = 4

[node name="MarginContainer1" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
visible = false
margin_right = 2161.0
margin_bottom = 147.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer1"]
margin_right = 2161.0
margin_bottom = 147.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer1/HBoxContainer"]
margin_right = 537.0
margin_bottom = 147.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer1/HBoxContainer/MarginContainer2"]
modulate = Color( 0.890196, 0.85098, 0.85098, 1 )
margin_top = 43.0
margin_right = 487.0
margin_bottom = 103.0
size_flags_horizontal = 3
size_flags_vertical = 6
theme = SubResource( 4 )
text = "SECOND_ORDINAL"
align = 2
valign = 1

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer1/HBoxContainer"]
margin_left = 541.0
margin_right = 1078.0
margin_bottom = 147.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer1/HBoxContainer/MarginContainer4"]
margin_left = 20.0
margin_top = 20.0
margin_right = 517.0
margin_bottom = 127.0
rect_min_size = Vector2( 80, 0 )
size_flags_horizontal = 3
texture = ExtResource( 2 )
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer1/HBoxContainer"]
margin_left = 1082.0
margin_right = 1619.0
margin_bottom = 147.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_left = 50

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer1/HBoxContainer/MarginContainer"]
margin_left = 50.0
margin_right = 537.0
margin_bottom = 147.0
size_flags_horizontal = 3
size_flags_vertical = 7
theme = SubResource( 4 )
text = "Jugador 1"
valign = 1

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer1/HBoxContainer"]
margin_left = 1173.0
margin_right = 1524.0
margin_bottom = 449.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_left = 50

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer1/HBoxContainer/MarginContainer3"]
margin_left = 50.0
margin_right = 351.0
margin_bottom = 449.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer1/HBoxContainer/MarginContainer3/HBoxContainer"]
margin_right = 207.0
margin_bottom = 449.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer1/HBoxContainer/MarginContainer3/HBoxContainer/MarginContainer"]
margin_right = 197.0
margin_bottom = 449.0
size_flags_horizontal = 3
size_flags_vertical = 7
theme = SubResource( 4 )
text = "99.6s"
align = 2
valign = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer1/HBoxContainer/MarginContainer3/HBoxContainer"]
visible = false
margin_left = 211.0
margin_right = 301.0
margin_bottom = 449.0
size_flags_vertical = 3
texture = ExtResource( 5 )
stretch_mode = 4

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
visible = false
margin_right = 2161.0
margin_bottom = 222.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2"]
margin_right = 2161.0
margin_bottom = 222.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
margin_right = 537.0
margin_bottom = 222.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer2"]
modulate = Color( 0.788235, 0.623529, 0.509804, 1 )
margin_top = 81.0
margin_right = 487.0
margin_bottom = 141.0
size_flags_horizontal = 3
size_flags_vertical = 6
theme = SubResource( 4 )
text = "THIRD_ORDINAL"
align = 2
valign = 1

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
margin_left = 541.0
margin_right = 1078.0
margin_bottom = 222.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer4"]
margin_left = 20.0
margin_top = 20.0
margin_right = 517.0
margin_bottom = 202.0
rect_min_size = Vector2( 80, 0 )
size_flags_horizontal = 3
texture = ExtResource( 2 )
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
margin_left = 1082.0
margin_right = 1619.0
margin_bottom = 222.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_left = 50

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer"]
margin_left = 50.0
margin_right = 537.0
margin_bottom = 222.0
size_flags_horizontal = 3
size_flags_vertical = 7
theme = SubResource( 4 )
text = "Jugador 1"
valign = 1

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
margin_left = 1173.0
margin_right = 1524.0
margin_bottom = 449.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_left = 50

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer3"]
margin_left = 50.0
margin_right = 351.0
margin_bottom = 449.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer3/HBoxContainer"]
margin_right = 207.0
margin_bottom = 449.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer3/HBoxContainer/MarginContainer"]
margin_right = 197.0
margin_bottom = 449.0
size_flags_horizontal = 3
size_flags_vertical = 7
theme = SubResource( 4 )
text = "99.6s"
align = 2
valign = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2/HBoxContainer/MarginContainer3/HBoxContainer"]
visible = false
margin_left = 211.0
margin_right = 301.0
margin_bottom = 449.0
size_flags_vertical = 3
texture = ExtResource( 5 )
stretch_mode = 4

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
visible = false
margin_right = 2161.0
margin_bottom = 449.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3"]
margin_right = 2161.0
margin_bottom = 449.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3/HBoxContainer"]
margin_right = 537.0
margin_bottom = 449.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 50

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3/HBoxContainer/MarginContainer2"]
margin_top = 194.0
margin_right = 487.0
margin_bottom = 254.0
size_flags_horizontal = 3
size_flags_vertical = 6
theme = SubResource( 4 )
text = "FOURTH_ORDINAL"
align = 2
valign = 1

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3/HBoxContainer"]
margin_left = 541.0
margin_right = 1078.0
margin_bottom = 449.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3/HBoxContainer/MarginContainer4"]
margin_left = 20.0
margin_top = 20.0
margin_right = 517.0
margin_bottom = 429.0
rect_min_size = Vector2( 80, 0 )
size_flags_horizontal = 3
texture = ExtResource( 2 )
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3/HBoxContainer"]
margin_left = 1082.0
margin_right = 1619.0
margin_bottom = 449.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_left = 50

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3/HBoxContainer/MarginContainer"]
margin_left = 50.0
margin_right = 537.0
margin_bottom = 449.0
size_flags_horizontal = 3
size_flags_vertical = 7
theme = SubResource( 4 )
text = "Jugador 1"
valign = 1

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3/HBoxContainer"]
margin_left = 1173.0
margin_right = 1524.0
margin_bottom = 449.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_left = 50

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3/HBoxContainer/MarginContainer3"]
margin_left = 50.0
margin_right = 351.0
margin_bottom = 449.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3/HBoxContainer/MarginContainer3/HBoxContainer"]
margin_right = 207.0
margin_bottom = 449.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3/HBoxContainer/MarginContainer3/HBoxContainer/MarginContainer"]
margin_right = 197.0
margin_bottom = 449.0
size_flags_horizontal = 3
size_flags_vertical = 7
theme = SubResource( 4 )
text = "99.6s"
align = 2
valign = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3/HBoxContainer/MarginContainer3/HBoxContainer"]
visible = false
margin_left = 211.0
margin_right = 301.0
margin_bottom = 449.0
size_flags_vertical = 3
texture = ExtResource( 5 )
stretch_mode = 4

[node name="Buttons" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 676.0
margin_right = 1524.0
margin_bottom = 906.0
rect_min_size = Vector2( 0, 230 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Buttons"]
margin_right = 760.0
margin_bottom = 230.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 50
custom_constants/margin_bottom = 15

[node name="PlayAgain" type="Button" parent="MarginContainer/VBoxContainer/Buttons/MarginContainer"]
margin_top = 50.0
margin_right = 740.0
margin_bottom = 215.0
focus_neighbour_left = NodePath("../../MarginContainer2/Menu")
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 3 )
text = "Volver a jugar"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/Buttons"]
margin_left = 764.0
margin_right = 1524.0
margin_bottom = 230.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 50
custom_constants/margin_left = 20
custom_constants/margin_bottom = 15

[node name="Menu" type="Button" parent="MarginContainer/VBoxContainer/Buttons/MarginContainer2"]
margin_left = 20.0
margin_top = 50.0
margin_right = 760.0
margin_bottom = 215.0
focus_neighbour_right = NodePath("../../MarginContainer/PlayAgain")
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )
text = "Volver al menu"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 910.0
margin_right = 1524.0
margin_bottom = 1000.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15

[node name="Controls" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 1509.0
margin_bottom = 75.0
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer/Controls"]
margin_right = 798.0
margin_bottom = 60.0
custom_constants/margin_right = 35
custom_constants/margin_left = 35

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/Controls/MarginContainer"]
margin_left = 35.0
margin_right = 763.0
margin_bottom = 60.0

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer/Controls/MarginContainer/HBoxContainer"]
margin_right = 212.0
margin_bottom = 60.0
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/Controls/MarginContainer/HBoxContainer"]
margin_left = 216.0
margin_top = 2.0
margin_right = 728.0
margin_bottom = 57.0
theme = SubResource( 6 )
text = "MOVE_BUTTON_WORD"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer/Controls"]
margin_left = 802.0
margin_right = 1494.0
margin_bottom = 60.0
custom_constants/margin_right = 35
custom_constants/margin_left = 35

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/Controls/MarginContainer2"]
margin_left = 35.0
margin_right = 657.0
margin_bottom = 60.0

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/VBoxContainer/MarginContainer/Controls/MarginContainer2/HBoxContainer"]
margin_right = 60.0
margin_bottom = 60.0
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/Controls/MarginContainer2/HBoxContainer"]
margin_left = 64.0
margin_top = 2.0
margin_right = 622.0
margin_bottom = 57.0
theme = SubResource( 6 )
text = "SELECT_BUTTON_WORD"

[node name="MultiMeshInstance" type="Timer" parent="."]
one_shot = true

[connection signal="visibility_changed" from="." to="." method="_on_Clasification_visibility_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/MarginContainer/PlayAgain" to="." method="_on_PlayAgain_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/MarginContainer2/Menu" to="." method="_on_Menu_pressed"]
